@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-01-08T01:18:07Z",
-  "count" : 5,
-  "count_minmax" : [ 3, 5 ],
-  "count_decinc" : [ -0, +5 ],
-  "uniques" : 5,
-  "uniques_minmax" : [ 3, 5 ],
-  "uniques_decinc" : [ -0, +5 ]
+  "timestamp" : "2025-01-08T12:34:10Z",
+  "count" : 6,
+  "count_minmax" : [ 3, 6 ],
+  "count_decinc" : [ -0, +6 ],
+  "uniques" : 6,
+  "uniques_minmax" : [ 3, 6 ],
+  "uniques_decinc" : [ -0, +6 ]
 }
