@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-01-08T01:18:07Z",
+  "timestamp" : "2025-01-08T12:34:10Z",
   "count_outdated" : 4569,
   "uniques_outdated" : 2318,
-  "count" : 4588,
-  "uniques" : 2337,
+  "count" : 4591,
+  "uniques" : 2340,
   "clones" : [
     {
       "timestamp": "2024-12-30T00:00:00Z",
@@ -61,12 +61,21 @@
     },
     {
       "timestamp": "2025-01-07T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 3, 5 ],
-      "count_decinc": [ 0, 5 ],
-      "uniques": 5,
-      "uniques_minmax": [ 3, 5 ],
-      "uniques_decinc": [ 0, 5 ]
+      "count": 6,
+      "count_minmax": [ 3, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 6,
+      "uniques_minmax": [ 3, 6 ],
+      "uniques_decinc": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2025-01-08T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
