@@ -1,6 +1,6 @@
 {
-  "count": 19,
-  "uniques": 16,
+  "count": 22,
+  "uniques": 18,
   "clones": [
     {
       "timestamp": "2024-12-30T00:00:00Z",
@@ -34,8 +34,13 @@
     },
     {
       "timestamp": "2025-01-07T00:00:00Z",
-      "count": 5,
-      "uniques": 5
+      "count": 6,
+      "uniques": 6
+    },
+    {
+      "timestamp": "2025-01-08T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
